# zaps

backend/: Cargo.toml
backend/migrations/: 0001_schema.sql  20260528000003_profile_enhancements.sql  20260530000000_create_webhook_tables.sql
backend/src/: app.rs  main.rs  models.rs
backend/src/api/: auth.rs  feed.rs  mod.rs  user.rs
backend/src/db/: mod.rs  models.rs
backend/src/http/: mod.rs  profiles.rs  webhooks.rs
backend/src/service/: mod.rs  profile_service.rs
contracts/: Cargo.toml
contracts/contracts/social_payment/: CHANGELOG.md
contracts/contracts/social_payment/src/: lib.rs
contracts/contracts/social_payment/tests/: comment_payment.rs
contracts/governance/: cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/subscription-payments/: cargo.toml
contracts/subscription-payments/src/: lib.rs  test.rs
mobileapp/: metro.config.cjs  package-lock.json  package.json
mobileapp/app/: _layout.tsx  mnemonic-backup.tsx  wallet-recovery.tsx
mobileapp/app/(personal)/: home.tsx
mobileapp/src/locales/: i18n.ts
mobileapp/src/services/: screenCapture.ts  socialService.ts  walletSecurity.ts
