[workspace]
resolver = "2"
members = ["example-contract", "registry-contract", "payment-router", "user-identity-contract", "reputation_score_contract","merchant-vault", "upgradeable-proxy", "subscription-payments", "governance","escrow-contract", "fee-distribution"]

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
